--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,13 @@ cmake_minimum_required(VERSION 2.8.2)
 set(CMAKE_USER_MAKE_RULES_OVERRIDE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/c_flag_overrides.cmake)
 set(CMAKE_USER_MAKE_RULES_OVERRIDE_CXX ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cxx_flag_overrides.cmake)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+if (MSVC_VERSION GREATER_EQUAL "1900")
+    include(CheckCXXCompilerFlag)
+    CHECK_CXX_COMPILER_FLAG("/std:c++17" _cpp_17_flag_supported)
+    if (_cpp_17_flag_supported)
+        add_compile_options("/std:c++17")
+    endif()
+endif()
 
 # Set a private module find path
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
@@ -249,7 +255,6 @@ add_executable( e57reader
 target_link_libraries( e57reader
     E57RefImpl
     E57SimpleImpl
-    stdc++fs
     time_conversion
     ${XML_LIBRARIES}
     ${Boost_LIBRARIES}
